--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.esp32_flutter">
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
    <application
-        android:label="esp32_flutter"
-        android:name="${applicationName}"
+        android:label="Bigbang"
+        android:name="Bigbang"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
